# cs457

./: .gitignore  README.md  bootstrap.py  install-requirements.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  shields.json  tox.ini
.github/workflows/: assignments.yml  release.yml
resources/: UNR.xcf  close.xcf
scripts/: PA1_test.sql  PA2_test.sql  PA3_test.sql  PA4_test.sql  bootstrap.py  create_release.py  embed_resources.py
src/: assignment1.py  database.py  database_impl.py  database_parser.py  embed.py  embedded.py  main.py  utils.py
src/database/: database.py  database_impl.py  database_parser.py  embed.py  embedded.py
tests/: test_database.py  test_simple.py
